--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,11 +2,13 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
+    // ... other existing options
+    "skipLibCheck": true,
     "baseUrl": "./",
     "outDir": "./dist/out-tsc",
     "forceConsistentCasingInFileNames": true,
     "esModuleInterop": true,
-    "strict": true,
+    "strict": false,
     "noImplicitOverride": true,
     "noPropertyAccessFromIndexSignature": true,
     "noImplicitReturns": true,
