--- a/package.json
+++ b/package.json
@@ -21,14 +21,18 @@
     "@angular/platform-browser": "^20.0.0",
     "@angular/platform-browser-dynamic": "^20.0.0",
     "@angular/router": "^20.0.0",
+    "@capacitor/android": "7.4.1",
     "@capacitor/app": "7.0.1",
-    "@capacitor/core": "7.4.1",
+    "@capacitor/core": "^7.4.1",
     "@capacitor/haptics": "7.0.1",
     "@capacitor/keyboard": "7.0.1",
     "@capacitor/status-bar": "7.0.1",
     "@ionic/angular": "^8.0.0",
     "ionicons": "^7.0.0",
+    "lottie-web": "^5.13.0",
+    "ngx-lottie": "^20.0.0",
     "rxjs": "~7.8.0",
+    "shepherd.js": "^14.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
@@ -42,7 +46,7 @@
     "@angular/cli": "^20.0.0",
     "@angular/compiler-cli": "^20.0.0",
     "@angular/language-service": "^20.0.0",
-    "@capacitor/cli": "7.4.1",
+    "@capacitor/cli": "^7.4.1",
     "@ionic/angular-toolkit": "^12.0.0",
     "@types/jasmine": "~5.1.0",
     "@typescript-eslint/eslint-plugin": "^8.18.0",
